# HIK-driver

./: set_env_path.sh  setup.sh
MVS/HIK/: CMakeLists.txt  GetHik.cpp  hikStream.h
MVS/Samples/64/ChunkData/: ChunkData
MVS/Samples/64/Display/: Display  Display.cpp
MVS/Samples/64/GrabImage/: GrabImage
MVS/include/: CameraParams.h
MVS/lib/32/: libMVGigEVisionSDK.so.3.0.0.6  libMvCameraControl.so.3.0.0.6  libMvUsb3vTL.so.3.0.0.6
MVS/logserver/Debian/: MvLogServerd
MVS/opencvgetdata/: CMakeLists.txt  GetImage.cpp  Makefile1
